--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-infinite-scroller": "^1.2.6",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
